--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1117,7 +1117,7 @@ a {
 .cid-t85G0o6LiX {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-image: url("../../../assets/images/bia1.jpg");
+  background-image: url("../../../assets/images/mbr-1-1920x1346.png");
 }
 .cid-t85G0o6LiX .mbr-fallback-image.disabled {
   display: none;
@@ -1194,7 +1194,7 @@ a {
 .cid-t85GM5kl7P {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-image: url("../../../assets/images/bia1.jpg");
+  background-image: url("../../../assets/images/mbr-1-1920x1346.png");
 }
 .cid-t85GM5kl7P .mbr-fallback-image.disabled {
   display: none;
@@ -1304,7 +1304,7 @@ a {
 .cid-t85GX7KeX1 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-image: url("../../../assets/images/bia1.jpg");
+  background-image: url("../../../assets/images/mbr-1-1920x1346.png");
 }
 .cid-t85GX7KeX1 .mbr-fallback-image.disabled {
   display: none;
@@ -1401,7 +1401,7 @@ a {
 .cid-t85H2TAQ4M {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-image: url("../../../assets/images/bia1.jpg");
+  background-image: url("../../../assets/images/mbr-1-1920x1346.png");
 }
 .cid-t85H2TAQ4M .mbr-fallback-image.disabled {
   display: none;
