--- a/assets/dropdown/css/style.css
+++ b/assets/dropdown/css/style.css
@@ -263,3 +263,94 @@
   transition: none !important; }
 
 
+/* menu */
+.menu-wrapper, .menu a{
+  width: 100%;
+}
+
+.menu::after{
+  content: '';
+  clear: both;
+  display: block;
+}
+
+.menu a{
+  display: block;
+  padding: 10px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.menu li{
+  position: relative;
+}
+
+.menu > li{
+  float: left;
+}
+
+.menu, .menu ul{
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  background: whitesmoke;
+}
+
+.menu ul li+li{
+  border-top: 1px solid #fff;
+}
+
+.menu ul{
+  position: absolute;
+  box-shadow:  5px 5px 10px 0 rgba(0,0,0, 0.5);
+}
+
+.menu > li ul, .menu ul ul{
+  opacity: 0;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+  z-index: -1;
+  visibility: hidden;
+}
+
+.menu > li ul{
+  top: 0%;
+  left: 0;
+}
+
+.menu ul ul{
+  left: 0%;
+  top: 100%;
+}
+
+.menu ul a{
+  width: 250px;
+}
+
+.menu > li:hover > ul{
+  top: 0%;
+  opacity: 1;
+  z-index: 1;
+  visibility: visible;
+}
+
+.menu ul > li:hover > ul{
+  left: 0%;
+  opacity: 1;
+  z-index: 1;
+  visibility: visible;
+}
+
+.menu-gold, .menu-gold a{
+  color: #000;
+}
+.menu-gold a:hover{
+  background-color: #000;
+  color: #000;
+}
+
+/* ends */
