--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1117,7 +1117,7 @@ a {
 .cid-t85G0o6LiX {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-image: url("../../../assets/images/mbr-1-1920x1346.png");
+  background-image: url("../../../assets/images/bia2.jpg");
 }
 .cid-t85G0o6LiX .mbr-fallback-image.disabled {
   display: none;
@@ -1194,7 +1194,7 @@ a {
 .cid-t85GM5kl7P {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-image: url("../../../assets/images/mbr-1-1920x1346.png");
+  background-image: url("../../../assets/images/cover2.jpg");
 }
 .cid-t85GM5kl7P .mbr-fallback-image.disabled {
   display: none;
@@ -1304,7 +1304,7 @@ a {
 .cid-t85GX7KeX1 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-image: url("../../../assets/images/mbr-1-1920x1346.png");
+  background-image: url("../../../assets/images/cover1.jpg");
 }
 .cid-t85GX7KeX1 .mbr-fallback-image.disabled {
   display: none;
@@ -1398,10 +1398,49 @@ a {
 .cid-t85H0KjDMv img {
   width: 100%;
 }
+.cid-t85GX7KeT1 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-image: url("../../../assets/images/bia1.jpg");
+}
+.cid-t85GX7KeT1 .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-t85GX7KeT1 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-t85GX7KeT1 .card-wrapper {
+  background: #ffffff;
+  border-radius: 4px;
+}
+@media (max-width: 767px) {
+  .cid-t85GX7KeT1 .card-wrapper {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .cid-t85GX7KeT1 .card-wrapper {
+    padding: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-t85GX7KeT1 .card-wrapper {
+    padding: 4rem;
+  }
+}
+.cid-t85GX7KeT1 .card-title {
+  text-align: center;
+}
 .cid-t85H2TAQ4M {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-image: url("../../../assets/images/mbr-1-1920x1346.png");
+  background-image: url("../../../assets/images/media-grid-1.png");
 }
 .cid-t85H2TAQ4M .mbr-fallback-image.disabled {
   display: none;
